# Neural_network_image_recognition

./: .gitignore  CMakeLists.txt  README.md  main.cpp
Libraries/: Apprentissage.h  Fonction_activation.h  Image.h  Input.h  Input_intermediaire.h  Iris.h  NN1.h  NN2.h  Perceptron.h  Perceptron_hidden.h  Service.h  Sigmoide.h  Tanh.h
Sources/: Image.cpp  Input.cpp  Input.h  Iris.cpp  Service.cpp
Sources/Bib/: Image.h  Input.h  Iris.h
Sources/Fonction_activations/: Fonction_activation.cpp  Sigmoide.cpp  Tanh.cpp
Sources/IA/: Apprentissage.cpp  NN1.cpp  NN2.cpp  Perceptron.cpp  Perceptron_hidden.cpp
Sources/Input/: Image.cpp  Input.cpp  Iris.cpp
Sources/Inputs/: Image.cpp  Input.cpp  Input_intermediaire.cpp  Iris.cpp
Sources/Libraries/: Fonction_activation.h  Image.h  Input.h  Iris.h  NN1.h  PatronApprentissage.h  Perceptron.h  Service.h  Sigmoide.h  Tanh.h  Test.h
Sources/Perceptrons/: NN1.cpp  PatronApprentissage.cpp  Perceptron.cpp  Perceptron.h  Test.cpp
Sources/Services/: Service.cpp
Sources/Tests/: Test.cpp
Tests/: Point.cpp  Point.h
